добавил вторую страницу

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,12 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
 </head>
 <body class="body">
-    <div class="menu">
-        <div class="submenu">
-        <a class="name"><img class = logo src="img/logo.png">Carcassone Online</a>
-        <a class="accent">ПОИСК ИГР</a>
+<div class="menu">
+    <div class="submenu">
+        <a href="index.html" class="name"><img class = logo src="img/logo.png">Carcassonne Online</a>
+        <a href="gameLobby.html" class="accent">ПОИСК ИГР</a>
         <a class="block" >Друзья</a>
-        <a class="block">Контакты</a>
+        <a href="#cont" class="block">Контакты</a>
         <div class="dropdownMenu">
             <button class="menubtn"><img class="img" src="img/avatar.jpg"></button>
             <div class="dropdownMenu-content">
@@ -27,9 +27,9 @@
                 <a href="#">Рейтинг - 0</a>
                 <a href="#">Выйти</a>
             </div>
-            </div>
         </div>
     </div>
+</div>
 
     <div class="main">
         <div class="subMain">
@@ -38,11 +38,11 @@
         </div>
     </div>
 
-    <div class="footer">
+    <div id="cont" class="footer">
         <div class="subFooter">
             <div class="info">Сайт разработан в учебных целях в рамках РГР по дисциплине "Технологии и методы программирования"</div>
             <div class="info1">Разработчики Максутов Ильдар Бахмацкий Юрий Иванов Максим</div>
-            <div class="info1">Соцсети<img id="img1" src="img/vk.png"> </div>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQinfo1" target="_blank" class="info1">Соцсети<img id="img1" src="img/vk.png"> </a>
         </div>
     </div>
 
